--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -1,13 +1,65 @@
 {
   "defaultAccounts": [
-    { "email": "admin@foo.com", "password": "changeme", "role": "admin" },
-    { "email": "john@foo.com", "password": "changeme" }
+    {
+      "email": "admin@foo.com",
+      "password": "changeme",
+      "role": "admin",
+      "firstname": "Admin",
+      "lastname": "Istrator",
+      "points": "1",
+      "major": "ICS",
+      "grad_date": "Spring 2021"
+    },
+    {
+      "email": "john@foo.com",
+      "password": "changeme",
+      "firstname": "John",
+      "lastname": "Foo",
+      "points": "1",
+      "major": "ICS",
+      "grad_date": "Fall 2020"
+    }
   ],
-
   "defaultData": [
-    { "name": "Basket", "quantity": 3, "owner": "john@foo.com", "condition": "excellent" },
-    { "name": "Bicycle", "quantity": 2, "owner": "john@foo.com", "condition": "poor" },
-    { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
-    { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
+    {
+      "name": "Johnny Johnson",
+      "className": "ICS 111",
+      "reason": "Homework Help",
+      "owner": "john@foo.com",
+      "time": "5:12 pm",
+      "month": "December",
+      "day": "8",
+      "year": "2020",
+      "description": "There is a bug in my program but I cannot find it. Can I please get some help?",
+      "findGroup": "Yes"
+    },
+    {
+      "name": "Amanda McPhearson",
+      "className": "ICS 111",
+      "reason": "Homework Help",
+      "owner": "john@foo.com",
+      "time": "1:45 pm",
+      "month": "December",
+      "day": "1",
+      "year": "2020",
+      "description": "Need help on my project",
+      "findGroup": "Yes"
+    }
+  ],
+  "defaultLeaderboards": [
+    {
+      "name": "Philip Johnson",
+      "ranking": 1,
+      "owner": "john@foo.com",
+      "points": 5,
+      "image": "https://philipmjohnson.github.io/images/philip2.jpeg"
+    },
+    {
+      "name": "Henri Casanova",
+      "ranking": 2,
+      "owner": "john@foo.com",
+      "points": 3,
+      "image": "https://avatars0.githubusercontent.com/u/7494478?s=460&v=4"
+    }
   ]
 }
