--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,13 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.12.5",
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/interaction": "^5.5.0",
+    "@fullcalendar/react": "^5.5.0",
+    "@fullcalendar/timegrid": "^5.5.1",
     "classnames": "^2.2.6",
     "core-js": "^3.8.3",
+    "fullcalendar": "^5.5.1",
     "graphql": "^14.5.8",
     "meteor-node-stubs": "^1.0.1",
     "prop-types": "^15.7.2",
