gave users a role and changed paths

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -13,6 +13,7 @@
     {
       "email": "john@foo.com",
       "password": "changeme",
+      "role": "user",
       "firstname": "John",
       "lastname": "Foo",
       "points": "1",
